# cpp-sbom

./: CMakeLists.txt  PLAN.md  README.md  pyproject.toml
app1/: CMakeLists.txt
app1/src/: main.cpp
app2/: CMakeLists.txt
app2/src/: main.cpp
ci/: Jenkinsfile
cmake/: Sbom.cmake
corelib/: CMakeLists.txt
corelib/src/: corelib.cpp  corelib.h
gui1lib/: CMakeLists.txt
gui1lib/src/: gui1lib.cpp  gui1lib.h
gui2lib/: CMakeLists.txt
gui2lib/src/: gui2lib.cpp  gui2lib.h
scripts/: generate_sbom.py  rehash_sbom.py  verify_sbom.py
scripts/sbomgen/: __init__.py  generator.py  qt_sbom.py  rehash.py
service/: CMakeLists.txt
service/src/: main.cpp
sqlite/: CMakeLists.txt
tests/: conftest.py  test_generator.py  test_qt_sbom.py  test_rehash.py
tests/fixtures/: vendorlib-1.2.3.spdx.json
tests/fixtures/qt-sbom/: qt5compat-6.11.1.spdx  qtbase-6.11.1.source.spdx  qtbase-6.11.1.spdx
vendorlib/cmake/: VendorlibConfig.cmake
vendorlib/include/: vendorlib.h
vendorlib/lib/: vendorlib.lib
vendorlib/sbom/: vendorlib-1.2.3.spdx.json
vendorlib/src-sim/: CMakeLists.txt  vendorlib.cpp
